--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">KGTest</string>
     <string name="hent_message">Enter your Text ...</string>
+    <string name="next">Next</string>
 </resources>
